# Project-X

./: .gitignore  README.md  ref.md
backend/: Makefile  Pipfile  anki_service.py  backend.py  bert_service.py  database.py  day_spacing_alogirthm.py  go.mod  go.sum  main.go  main_anki.go  mistakes.md  pyproject.toml  req.txt  skills.py
backend/calendar/: generate_ics.py  ics_service.py
backend/content/: active_recall_quiz.json  content_importer.py  effective_practice_quiz.json  elaboration_interleaving_quiz.json  energy_management_quiz.json  energy_optimization_quiz.json  focus_techniques_quiz.json  habit_formation_quiz.json  import_commands.sh  import_quizzes.sh  learning_active_recall.md  learning_memory_techniques.md  learning_note_taking.md  learning_spaced_repetition.md  memory_techniques_quiz.json  mood_tracking_quiz.json  note_taking_quiz.json  pomodoro_quiz.json  prioritization_quiz.json  productivity_energy_management.md  productivity_pomodoro_technique.md  productivity_prioritization.md  productivity_time_blocking.md  retrieval_practice_quiz.json  self_regulation_energy_levels.md  self_regulation_focus_techniques.md  self_regulation_habit_formation.md  self_regulation_mood_tracking.md  spaced_repetition_quiz.json  study_effective_practice.md  study_elaboration.md  study_retrieval_practice.md  time_blocking_quiz.json
backend/docker/: docker-compose.yml
backend/forgetting-curve-algorithm/: anki_service.py  app.py  db_config.py  learning.db  model.pt  models.py  results.txt  ssp_mmc.py  train.py  vaildate.py
backend/forgetting-curve-algorithm/.ipynb_checkpoints/: check_valid-checkpoint.py
backend/forgetting-curve-algorithm/models/: skill.py
backend/forgetting-curve-algorithm/ssp_mmc/: algorithm.py  model.py  model_improvements.py  retrain.py
backend/journaling/: journal_entry.py  markdown.py  sync.py
backend/model/: skill.go  skillRelation.go  study_history.go  topic.go
backend/private/: package-lock.json  package.json  vite.config.js
backend/private/src/: App.jsx  index.css
backend/private/src/components/ui/: button.jsx  card.jsx
backend/tests/: test_backend.py
docs/design/: algorithms.md  api.md  targets.md
frontend/: .gitignore  notes.md  pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/models/: calendar_event.dart  content.dart  energy_level.dart  focus_session.dart  habit.dart  meeting.dart  mood_entry.dart  reflection.dart  task.dart  topic.dart
frontend/lib/services/: api_service.dart  calender_service.dart  content_service.dart  energy_service.dart  focus_session_service.dart  google_calendar_service.dart  habit_service.dart  ics_service.dart  learning_service.dart  local_database.dart  local_service.dart  mood_service.dart  profile_service.dart  reflection_service.dart  sync_service.dart  task_service.dart  topic_service.dart
frontend/lib/ui/calender/: add_event_dialog.dart  calendar_settings.dart  calendar_view.dart  event_tile.dart  ics_config_dialog.dart  next_time_block.dart  test_calendar_page.dart
frontend/lib/ui/content/: article_view.dart  content_list.dart  content_viewer.dart  guide_view.dart  learning_resources_page.dart  quiz_view.dart  search_delegate.dart  topic_content_page.dart
frontend/lib/ui/learning/: learning_module_home.dart  learning_module_navigator.dart  progress_visualisation_page.dart  session_planner_page.dart  topic_content_manager.dart
frontend/lib/ui/pages/: add_topic_page.dart  home_screen.dart  learning_dashboard.dart  modules_view.dart  settings_page.dart
frontend/lib/ui/self_regulation/: add_habit_dialog.dart  add_mood_entry_dialog.dart  add_reflection_dialog.dart  energy_tracking.dart  habit_builder.dart  mood_tracking.dart  pomodoro_timer.dart  reflection_journal.dart  self_regulation_page.dart
frontend/lib/ui/tasks/: horizontal_task_scroller.dart  task_card.dart  task_list.dart
frontend/src/components/: TopicScheduleOverview.jsx
frontend/src/components/ui/: input.jsx
(+11 files in other folders)
