[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["DemiAina <100835583+DigitalDemi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
anki = "^24.11"
anyio = "^4.6.2.post1"
aqt = "^24.11"
argcomplete = "^3.5.1"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
asttokens = "^2.4.1"
async-lru = "^2.0.4"
attrs = "^24.2.0"
autocommand = "^2.2.2"
babel = "^2.16.0"
beautifulsoup4 = "^4.12.3"
bleach = "^6.2.0"
blinker = "^1.9.0"
btrfsutil = "^6.11"
certifi = "^2024.8.30"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
colorama = "^0.4.6"
comm = "^0.2.2"
contourpy = "^1.3.1"
cryptography = "^44.0.0"
cycler = "^0.12.1"
dbus-python = "^1.3.2"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
distlib = "^0.3.9"
distro = "^1.9.0"
executing = "^2.1.0"
fastjsonschema = "^2.21.0"
filelock = "^3.16.1"
flask = "^3.1.0"
flask-cors = "^5.0.0"
fonttools = "^4.55.0"
h11 = "^0.14.0"
httpcore = "^1.0.7"
httpx = "^0.28.0"
idna = "^3.10"
importlib-metadata = "^8.5.0"
inflect = "^7.4.0"
iniconfig = "^2.0.0"
ipykernel = "^6.29.5"
ipython = "^8.30.0"
itsdangerous = "^2.2.0"
jaraco-collections = "^5.1.0"
jaraco-context = "^6.0.1"
jaraco-functools = "^4.1.0"
jaraco-text = "^4.0.0"
jedi = "^0.19.2"
jinja2 = "^3.1.4"
json5 = "^0.10.0"
jsonschema = "^4.23.0"
jsonschema-specifications = "^2024.10.1"
jupyter-events = "^0.10.0"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
jupyter-server = "^2.14.2"
jupyterlab = "^4.3.1"
jupyterlab-pygments = "^0.3.0"
jupyterlab-server = "^2.27.3"
kiwisolver = "^1.4.7"
lit = "^18.1.8"
lxml = "^5.3.0"
mako = "^1.3.6"
markdown = "^3.7"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
matplotlib = "^3.9.2"
matplotlib-inline = "^0.1.7"
mdurl = "^0.1.2"
meson = "^1.6.0"
mistune = "^3.0.2"
more-itertools = "^10.5.0"
nbclient = "^0.10.1"
nbconvert = "^7.16.4"
nbformat = "^5.10.4"
nest-asyncio = "^1.6.0"
notebook = "^7.2.2"
notebook-shim = "^0.2.4"
numpy = "^2.1.3"
ordered-set = "^4.1.0"
orjson = "^3.10.12"
overrides = "^7.7.0"
packaging = "^24.2"
pandas = "^2.2.3"
pandocfilters = "^1.5.1"
parso = "^0.8.4"
pexpect = "^4.9.0"
pillow = "^11.0.0"
pipenv = "^2024.4.0"
pipx = "^1.7.1"
platformdirs = "^4.3.6"
pluggy = "^1.5.0"
prometheus-client = "^0.21.0"
prompt-toolkit = "^3.0.48"
protobuf = "^5.29.0"
psutil = "^6.1.0"
psycopg = "^3.2.3"
psycopg2 = "^2.9.10"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pycairo = "^1.27.0"
pycparser = "^2.22"
pygments = "^2.18.0"
pygobject = "^3.50.0"
pyparsing = "^3.2.0"
pyqt5 = "^5.15.11"
pyqt5-sip = "^12.15.0"
pyqt6 = "^6.7.1"
pyqt6-webengine = "^6.7.0"
pyqt6-sip = "^13.8.0"
pysocks = "^1.7.1"
pytest = "^8.3.3"
python-dateutil = "^2.9.0.post0"
python-json-logger = "^2.0.7"
pytz = "^2024.2"
pywal = "^3.3.0"
pyxdg = "^0.28"
pyyaml = "^6.0.2"
pyzmq = "^26.2.0"
ranger-fm = "^1.9.4"
referencing = "^0.35.1"
reflector = "^0.1"
requests = "^2.32.3"
rich = "^13.9.4"
rpds-py = "^0.21.0"
ruamel-yaml = "^0.18.6"
ruamel-yaml-clib = "^0.2.12"
send2trash = "^1.8.3"
setuptools = "^75.6.0"
six = "^1.16.0"
sniffio = "^1.3.1"
soupsieve = "^2.6"
stack-data = "^0.6.3"
tbb = "^2022.0.0"
tinycss2 = "^1.4.0"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
